Add a button to allow users to go directly to the play page and style it.

--- a/study.html
+++ b/study.html
@@ -201,6 +201,11 @@
         </button>
       </div>
 
+      <p class="go-play">
+        Ready to test your knowledge?<br>
+        Then let's play: <a href="play.html" class="buttons small-buttons play-button">Play</a>
+      </p>
+
       <section class="subject-content-wrapper">
         <!-- Volcano article -->
         <article class="subject-content volcano show">
