--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <span class="menu-text">Menu</span>
         </button>
 
-        <div class="navigation-menu hide">
+        <div class="navigation-menu">
           <ul class="navigation-list">
             <li class="navigation-items">
               <a
