Remove the hide class to the navigation menu causing it to be not display.

--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
           <span class="menu-text">Menu</span>
         </button>
 
-        <div class="navigation-menu hide">
+        <div class="navigation-menu">
           <ul class="navigation-list">
             <li class="navigation-items">
               <a
