Create the path of the easy labyrinth in style.css.

--- a/play.html
+++ b/play.html
@@ -251,15 +251,40 @@
         <button aria-label="Start the game." id="start-button">Start</button>
 
         <!--------------------- Game -->
-        <div id="easy-game" class="game-modal">
+        <div id="easy-game" class="game-modal modal-active">
           <div class="game-display">
             <button data-new-game class="new-game-button">New game</button>
             <div data-game-subject class="game-subject"></div>
             <div data-game-level class="game-level"></div>
             <button data-exit-game="#easy-game" aria-label="Back to the play page." class="exit-button">Exit</button>
           </div>
-          <div class="grid">
-            <div class="avatar"></div>
+          <div class="grid-easy">
+             <div id="one"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div> 
+            <div id="two"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="three"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="four"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="five"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="six"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="seven"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="eight"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="nine"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="ten"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="eleven"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="twelve"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="thirteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="fourteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="fifteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="sixteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="seventeen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="eighteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="nineteen"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="twenty"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="twenty-one"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="twenty-two"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="twenty-three"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            <div id="twenty-four"><img class="volcano-path" src="assets/images/labyrinth-skin/volcano-labyrinth.jpg" alt="Labyrinth path." height="60" width="60"></div>
+            
+            <div id="player" class="avatar twenty-four"></div>
           </div>
             <div class="controls"> 
                 <button data-button-direction="up" id="arrow-up" class="control-buttons button-up"><i class="far fa-arrow-alt-circle-up"></i></button>
@@ -268,7 +293,7 @@
                 <button data-button-direction="down" id="arrow-down" class="control-buttons button-down"><i class="far fa-arrow-alt-circle-down"></i></button> 
             </div>
         </div>
-        <div class="game-overlay"></div>
+        <div class="game-overlay overlay-active"></div>
       </section>
     </section>
 
